# mws

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  How_we_built_the_initial_implementation.md  How_we_built_the_spec.md  How_we_got_CI_working.md  LICENSE  README.md  REVIEW_FINDINGS.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: REVIEW_FINDINGS.md  agent-usage.md  aliases.md  auth-setup.md
skills/mws-calendar/: SKILL.md
skills/mws-drive/: SKILL.md
skills/mws-mail/: SKILL.md
skills/mws-shared/: SKILL.md
skills/mws-teams/: SKILL.md
src/mws/: __init__.py  __main__.py  cli.py  errors.py
src/mws/auth/: __init__.py  client_creds.py  commands.py  config.py  device_flow.py
src/mws/client/: __init__.py  graph.py
src/mws/engine/: __init__.py  aliases.py  commander.py  executor.py
src/mws/mcp/: __init__.py  server.py
src/mws/output/: format.py
src/mws/schema/: __init__.py  build.py  cache.py  fetch.py  introspect.py
tests/: conftest.py  test_aliases.py  test_auth.py  test_client.py  test_engine.py  test_executor.py  test_integration.py  test_mcp.py  test_output.py  test_scaffold.py  test_schema.py
